URGENT: Fix white-on-white text contrast issue

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Acceso - LocalPix V1.4</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/contrast-fix.css">
     <style>
         body {
             display: flex;
