--- a/templates/photographer.html
+++ b/templates/photographer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modo Fotógrafo - LocalPix</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/contrast-fix.css">
     {% include 'theme_loader.html' %}
     <script src="https://unpkg.com/face-api.js@0.22.2/dist/face-api.min.js"></script>
     <script src="https://unpkg.com/heic2any@0.0.4/dist/heic2any.min.js"></script>
