--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - LocalPix</title>
     <link rel="stylesheet" href="/static/style.css?v={{ range(1, 99999) | random }}">
+    <link rel="stylesheet" href="/static/contrast-fix.css">
     {% include 'theme_loader.html' %}
     <style>
         body {
