NUCLEAR FIX: Force all text dark

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
     <title>Acceso - LocalPix V1.4</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="/static/contrast-fix.css">
+    <link rel="stylesheet" href="/static/force-dark-text.css">
     <style>
         body {
             display: flex;
