--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,6 +7,7 @@
     <title>Admin - LocalPix</title>
     <link rel="stylesheet" href="/static/style.css?v={{ range(1, 99999) | random }}">
     <link rel="stylesheet" href="/static/contrast-fix.css">
+    <link rel="stylesheet" href="/static/force-dark-text.css">
     {% include 'theme_loader.html' %}
     <style>
         body {
